--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.57.0",
+    "git-commit-msg-linter": "^5.0.7",
     "husky": "^8.0.0",
     "lint-staged": "^15.2.2"
   }
