--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "husky install",
-    "postinstall": "npx husky-init"
+    "prepare": "husky",
+    "postinstall": "npx husky init"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +15,7 @@
   "devDependencies": {
     "eslint": "^8.57.0",
     "git-commit-msg-linter": "^5.0.7",
-    "husky": "^8.0.0",
+    "husky": "^9.0.11",
     "lint-staged": "^15.2.2"
   }
 }
