--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
     "git-commit-msg-linter": "^5.0.7",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3",
+    "pg": "^8.11.3"
   }
 }
