--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky",
-    "postinstall": "npx husky init"
+    "postinstall": "npx husky init",
+    "migrations": "node exec-migrations.js"
   },
   "keywords": [],
   "author": "",
