--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "lint-staged": "^15.2.2"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "uuid": "^9.0.1"
   }
 }
