--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky",
     "postinstall": "npx husky init",
-    "migrations": "node exec-migrations.js"
+    "migrations": "node exec-migrations.js",
+    "start:dev": "node --watch index.js"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +26,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "pg": "^8.11.3",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "validator": "^13.11.0"
   }
 }
