--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "eslint-config-prettier": "^9.1.0",
     "git-commit-msg-linter": "^5.0.7",
     "husky": "^9.0.11",
-    "lint-staged": "^15.2.2"
+    "lint-staged": "^15.2.2",
+    "prisma": "^5.11.0"
   },
   "dependencies": {
+    "@prisma/client": "^5.11.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
