--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky",
-    "postinstall": "npx husky init",
+    "postinstall": "npx husky init && npx prisma generate",
     "migrations": "node exec-migrations.js",
     "start:dev": "node --watch index.js"
   },
