--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "prepare": "husky",
     "postinstall": "npx husky init && npx prisma generate",
     "start:dev": "node --watch index.js"
@@ -18,6 +18,7 @@
     "eslint-config-prettier": "^9.1.0",
     "git-commit-msg-linter": "^5.0.7",
     "husky": "^9.0.11",
+    "jest": "^29.7.0",
     "lint-staged": "^15.2.2",
     "prisma": "^5.11.0"
   },
