chore: add test db to docker compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,24 @@
 version: '3'
 
 services:
-  postgres:
-    image: postgres
-    container_name: finance-app-postgres
-    environment:
-      POSTGRES_PASSWORD: password
-      POSTGRES_USER: root
-      POSTGRES_DB: financeapp
-    ports:
-      - '5432:5432'
-    volumes:
-      - ./.postgres-data:/var/lib/postgresql/data
+    postgres:
+        image: postgres
+        container_name: finance-app-postgres
+        environment:
+            POSTGRES_PASSWORD: password
+            POSTGRES_USER: root
+            POSTGRES_DB: financeapp
+        ports:
+            - '5432:5432'
+        volumes:
+            - ./.postgres-data:/var/lib/postgresql/data
+
+    postgres-test:
+        image: postgres
+        container_name: finance-app-postgres-test
+        environment:
+            POSTGRES_PASSWORD: password
+            POSTGRES_USER: root
+            POSTGRES_DB: financeapp
+        ports:
+            - '5433:5432'
