--- a/package.json
+++ b/package.json
@@ -1,41 +1,43 @@
 {
-  "name": "finance-app-api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "test": "jest",
-    "test:coverage": "jest --passWithNoTests --silent --coverage",
-    "prepare": "husky",
-    "postinstall": "npx husky init && npx prisma generate",
-    "start:dev": "node --watch index.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.24.0",
-    "@babel/preset-env": "^7.24.0",
-    "@faker-js/faker": "^8.4.1",
-    "@types/jest": "^29.5.12",
-    "babel-jest": "^29.7.0",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "git-commit-msg-linter": "^5.0.7",
-    "husky": "^9.0.11",
-    "jest": "^29.7.0",
-    "lint-staged": "^15.2.2",
-    "prisma": "^5.11.0"
-  },
-  "dependencies": {
-    "@prisma/client": "^5.11.0",
-    "bcryptjs": "^2.4.3",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.3",
-    "pg": "^8.11.3",
-    "uuid": "^9.0.1",
-    "validator": "^13.11.0",
-    "zod": "^3.22.4"
-  }
+    "name": "finance-app-api",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "type": "module",
+    "scripts": {
+        "test": "dotenv -e .env.test -- jest",
+        "test:watch": "dotenv -e .env.test -- jest --watch --passWithNoTests --silent",
+        "test:coverage": "jest --passWithNoTests --silent --coverage",
+        "prepare": "husky",
+        "postinstall": "npx husky init && npx prisma generate",
+        "start:dev": "node --watch index.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@babel/core": "^7.24.0",
+        "@babel/preset-env": "^7.24.0",
+        "@faker-js/faker": "^8.4.1",
+        "@types/jest": "^29.5.12",
+        "babel-jest": "^29.7.0",
+        "eslint": "^8.57.0",
+        "eslint-config-prettier": "^9.1.0",
+        "git-commit-msg-linter": "^5.0.7",
+        "husky": "^9.0.11",
+        "jest": "^29.7.0",
+        "lint-staged": "^15.2.2",
+        "prisma": "^5.11.0"
+    },
+    "dependencies": {
+        "@prisma/client": "^5.11.0",
+        "bcryptjs": "^2.4.3",
+        "dotenv": "^16.4.5",
+        "dotenv-cli": "^7.4.1",
+        "express": "^4.18.3",
+        "pg": "^8.11.3",
+        "uuid": "^9.0.1",
+        "validator": "^13.11.0",
+        "zod": "^3.22.4"
+    }
 }
