fix: add --runInBand flag to jest scripts

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
-        "test": "dotenv -e .env.test -- jest",
-        "test:watch": "dotenv -e .env.test -- jest --watch --passWithNoTests --silent",
+        "test": "dotenv -e .env.test -- jest --runInBand",
+        "test:watch": "dotenv -e .env.test -- jest --watch --passWithNoTests --silent --runInBand",
         "test:coverage": "jest --passWithNoTests --silent --coverage",
         "prepare": "husky",
         "postinstall": "npx husky init && npx prisma generate",
