--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dependencies": {
         "@prisma/client": "^5.11.0",
         "bcryptjs": "^2.4.3",
+        "dayjs": "^1.11.10",
         "dotenv": "^16.4.5",
         "dotenv-cli": "^7.4.1",
         "express": "^4.18.3",
