--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
-        "test": "dotenv -e .env.test -- jest --runInBand",
+        "test": "dotenv -e .env.test -- jest --runInBand --silent",
         "test:watch": "dotenv -e .env.test -- jest --watch --passWithNoTests --silent --runInBand",
         "test:coverage": "jest --passWithNoTests --silent --coverage",
         "prepare": "husky",
