--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
-        "test": "dotenv -e .env.test -- jest --runInBand --silent",
-        "test:watch": "dotenv -e .env.test -- jest --watch --passWithNoTests --silent --runInBand",
-        "test:coverage": "jest --passWithNoTests --silent --coverage",
+        "test": "dotenv -e .env.test -- jest --passWithNoTests --runInBand --silent --detectOpenHandles --forceExit",
+        "test:watch": "npm run test -- --watch",
+        "test:coverage": "npm run test -- --coverage",
         "prepare": "husky",
         "postinstall": "npx husky init && npx prisma generate",
         "start:dev": "node --watch index.js"
@@ -27,7 +27,8 @@
         "husky": "^9.0.11",
         "jest": "^29.7.0",
         "lint-staged": "^15.2.2",
-        "prisma": "^5.11.0"
+        "prisma": "^5.11.0",
+        "supertest": "^7.0.0"
     },
     "dependencies": {
         "@prisma/client": "^5.11.0",
