--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "dotenv-cli": "^7.4.1",
         "express": "^4.18.3",
         "pg": "^8.11.3",
+        "swagger-ui-express": "^5.0.0",
         "uuid": "^9.0.1",
         "validator": "^13.11.0",
         "zod": "^3.22.4"
