ci: add deploy github actions

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
         "test:coverage": "npm run test -- --coverage",
         "prepare": "husky",
         "postinstall": "npx husky init && npx prisma generate",
-        "start:dev": "node --watch index.js"
+        "start:dev": "node --watch index.js",
+        "eslint:check": "eslint src --ext .js",
+        "prettier:check": "prettier --check src"
     },
     "keywords": [],
     "author": "",
