--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
             - name: Eslint
                 run: npm run eslint:check
 
-            - name: Prettier:
+            - name: Prettier
                 run: npm run prettier:check
 
             - name: Test
