--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
             - name: Use Node.js
                 uses: actions/setup-node@v2
                 with:
-                    node-version: '20'
+                    node-version: "20"
 
             - name: Eslint
                 run: npm run eslint:check
