ci: fix github action file

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: Deploy
 
-on: 
+on:
     push:
         branches:
             - main
@@ -11,18 +11,18 @@ jobs:
 
         steps:
             - name: Checkout code
-                uses: actions/checkout@v2
+              uses: actions/checkout@v2
 
             - name: Use Node.js
-                uses: actions/setup-node@v2
-                with:
-                    node-version: "20"
+              uses: actions/setup-node@v2
+              with:
+                  node-version: '20'
 
             - name: Eslint
-                run: npm run eslint:check
+              run: npm run eslint:check
 
             - name: Prettier
-                run: npm run prettier:check
+              run: npm run prettier:check
 
             - name: Test
-                run: npm run test
+              run: npm run test
