--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,9 @@ jobs:
               with:
                   node-version: '20'
 
+            - name: Install dependencies
+              run: npm install
+
             - name: Eslint
               run: npm run eslint:check
 
