--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "husky": "^9.0.11",
         "jest": "^29.7.0",
         "lint-staged": "^15.2.2",
+        "prettier": "^3.2.5",
         "prisma": "^5.11.0",
         "supertest": "^7.0.0"
     },
