ci: add create .env.test file

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,9 @@ jobs:
               with:
                   node-version: '20'
 
+            - name: Create .env.test file
+              run: echo "DATABASE_URL=postgresql://root:password@localhost:5433/financeapp" >> .env.test
+
             - name: Install dependencies
               run: npm install
 
