--- a/package.json
+++ b/package.json
@@ -1,46 +1,46 @@
 {
-  "name": "finance-app-api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "test": "dotenv -e .env.test -- node --experimental-vm-modules node_modules/jest/bin/jest.js --passWithNoTests --runInBand --silent --detectOpenHandles --forceExit",
-    "test:watch": "npm run test -- --watch",
-    "test:coverage": "npm run test -- --coverage",
-    "prepare": "husky",
-    "postinstall": "npx husky init && npx prisma generate",
-    "start:dev": "node --watch index.js",
-    "eslint:check": "eslint src --ext .js",
-    "prettier:check": "prettier --check src"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@faker-js/faker": "^8.4.1",
-    "@types/jest": "^29.5.12",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "git-commit-msg-linter": "^5.0.7",
-    "husky": "^9.0.11",
-    "jest": "^29.7.0",
-    "lint-staged": "^15.2.2",
-    "prettier": "^3.2.5",
-    "prisma": "^5.11.0",
-    "supertest": "^7.0.0"
-  },
-  "dependencies": {
-    "@prisma/client": "^5.11.0",
-    "bcryptjs": "^2.4.3",
-    "dayjs": "^1.11.10",
-    "dotenv": "^16.4.5",
-    "dotenv-cli": "^7.4.1",
-    "express": "^4.18.3",
-    "pg": "^8.11.3",
-    "swagger-ui-express": "^5.0.0",
-    "uuid": "^9.0.1",
-    "validator": "^13.11.0",
-    "zod": "^3.22.4"
-  }
+    "name": "finance-app-api",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "type": "module",
+    "scripts": {
+        "test": "dotenv -e .env.test -- node --experimental-vm-modules node_modules/jest/bin/jest.js --passWithNoTests --runInBand --silent --detectOpenHandles --forceExit",
+        "test:watch": "npm run test -- --watch",
+        "test:coverage": "npm run test -- --coverage",
+        "prepare": "husky",
+        "postinstall": "npx husky init && npx prisma generate",
+        "start:dev": "node --watch index.js",
+        "eslint:check": "eslint src",
+        "prettier:check": "prettier --check src"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@faker-js/faker": "^8.4.1",
+        "@types/jest": "^29.5.12",
+        "eslint": "^9.1.1",
+        "eslint-config-prettier": "^9.1.0",
+        "git-commit-msg-linter": "^5.0.7",
+        "husky": "^9.0.11",
+        "jest": "^29.7.0",
+        "lint-staged": "^15.2.2",
+        "prettier": "^3.2.5",
+        "prisma": "^5.11.0",
+        "supertest": "^7.0.0"
+    },
+    "dependencies": {
+        "@prisma/client": "^5.11.0",
+        "bcryptjs": "^2.4.3",
+        "dayjs": "^1.11.10",
+        "dotenv": "^16.4.5",
+        "dotenv-cli": "^7.4.1",
+        "express": "^4.18.3",
+        "pg": "^8.11.3",
+        "swagger-ui-express": "^5.0.0",
+        "uuid": "^9.0.1",
+        "validator": "^13.11.0",
+        "zod": "^3.22.4"
+    }
 }
