--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
         "test": "dotenv -e .env.test -- node --experimental-vm-modules node_modules/jest/bin/jest.js --passWithNoTests --runInBand --silent --detectOpenHandles --forceExit",
         "test:watch": "npm run test -- --watch",
         "test:coverage": "npm run test -- --coverage",
-        "prepare": "husky",
-        "postinstall": "npx husky init && npx prisma generate",
+        "postinstall": "husky && npx prisma generate",
         "start:dev": "node --watch index.js",
         "eslint:check": "eslint src",
         "prettier:check": "prettier --check src"
@@ -27,20 +26,19 @@
         "jest": "^29.7.0",
         "lint-staged": "^15.2.2",
         "prettier": "^3.2.5",
-        "prisma": "^5.11.0",
+        "prisma": "^5.13.0",
         "supertest": "^7.0.0"
     },
     "dependencies": {
-        "@prisma/client": "^5.11.0",
+        "@prisma/client": "^5.13.0",
         "bcryptjs": "^2.4.3",
-        "dayjs": "^1.11.10",
+        "dayjs": "^1.11.11",
         "dotenv": "^16.4.5",
         "dotenv-cli": "^7.4.1",
-        "express": "^4.18.3",
-        "pg": "^8.11.3",
+        "express": "^4.19.2",
         "swagger-ui-express": "^5.0.0",
         "uuid": "^9.0.1",
         "validator": "^13.11.0",
-        "zod": "^3.22.4"
+        "zod": "^3.23.5"
     }
 }
