chore: add start script

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "test:coverage": "npm run test -- --coverage",
         "postinstall": "husky && npx prisma generate",
         "start:dev": "node --watch index.js",
+        "start": "node index.js",
         "eslint:check": "eslint src",
         "prettier:check": "prettier --check src"
     },
