--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dependencies": {
         "@prisma/client": "^5.13.0",
         "bcryptjs": "^2.4.3",
+        "cors": "^2.8.5",
         "dayjs": "^1.11.11",
         "dotenv": "^16.4.5",
         "dotenv-cli": "^7.4.1",
